# sar_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: SarTaskTypes.msg  VictimAnswer.msg  Victims.msg
