<?xml version="1.0"?>
<package>
  <name>sar_msgs</name>
  <version>0.0.0</version>
  <description>The sar_msgs package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  
  <maintainer email="k.kurowski@sim.tu-darmstadt.de">Karen Kurowski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>